Update Using machine learning techniques to analyze open ended survey data.ipynb

--- a/Using machine learning techniques to analyze open ended survey data.ipynb
+++ b/Using machine learning techniques to analyze open ended survey data.ipynb
@@ -938,7 +938,7 @@
       "\n",
       "Algorithm: Random forest\n",
       "    Inner loop:\n",
-      "Fitting 3 folds for each of 144 candidates, totalling 432 fits\n"
+      "Fold 1 \n"
      ]
     },
     {
@@ -951,7 +951,7 @@
       "        Micro F1 (on outer loop): 48.44%\n",
       "        Micro Recall (on outer loop): 88.59%\n",
       "        Micro Precision (on outer loop): 33.33%\n",
-      "Fitting 3 folds for each of 144 candidates, totalling 432 fits\n"
+      "Fold 2 \n"
      ]
     },
     {
@@ -964,7 +964,7 @@
       "        Micro F1 (on outer loop): 47.99%\n",
       "        Micro Recall (on outer loop): 87.95%\n",
       "        Micro Precision (on outer loop): 32.99%\n",
-      "Fitting 3 folds for each of 144 candidates, totalling 432 fits\n"
+      "Fold 3 \n"
      ]
     },
     {
@@ -977,7 +977,7 @@
       "        Micro F1 (on outer loop): 48.30%\n",
       "        Micro Recall (on outer loop): 88.75%\n",
       "        Micro Precision (on outer loop): 33.18%\n",
-      "Fitting 3 folds for each of 144 candidates, totalling 432 fits\n"
+      "Fold 4 \n"
      ]
     },
     {
@@ -990,7 +990,7 @@
       "        Micro F1 (on outer loop): 48.23%\n",
       "        Micro Recall (on outer loop): 88.79%\n",
       "        Micro Precision (on outer loop): 33.11%\n",
-      "Fitting 3 folds for each of 144 candidates, totalling 432 fits\n"
+      "Fold 5 \n"
      ]
     },
     {
