Update Using machine learning techniques to analyze open ended survey data.ipynb

--- a/Using machine learning techniques to analyze open ended survey data.ipynb
+++ b/Using machine learning techniques to analyze open ended survey data.ipynb
@@ -1146,7 +1146,7 @@
      "output_type": "stream",
      "text": [
       "\r",
-      "  0%|                                                                          | 0/100 [00:00<?, ?trial/s, best loss=?]"
+      "  0%|                                                                          | 0/100 [00:00<?, ?trial/s, best loss=?]\n"
      ]
     },
     {
@@ -2934,7 +2934,7 @@
      "output_type": "stream",
      "text": [
       "\r",
-      "  0%|                                                                           | 0/30 [00:00<?, ?trial/s, best loss=?]"
+      "  0%|                                                                           | 0/30 [00:00<?, ?trial/s, best loss=?]\n"
      ]
     },
     {
@@ -3462,7 +3462,7 @@
      "output_type": "stream",
      "text": [
       "\r",
-      "  0%|                                                                           | 0/30 [00:00<?, ?trial/s, best loss=?]"
+      "  0%|                                                                           | 0/30 [00:00<?, ?trial/s, best loss=?]\n"
      ]
     },
     {
@@ -4645,22 +4645,14 @@
       "        Micro Recall (on outer loop): 51.54%\n",
       "        Micro Precision (on outer loop): 59.87%\n",
       "\n",
-      "  7%|███▏                                            | 2/30 [00:20<04:18,  9.25s/trial, best loss: -0.4919454770755886]"
+      "  7%|███▏                                            | 2/30 [00:20<04:18,  9.25s/trial, best loss: -0.4919454770755886]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 40%|██████████████████▍                           | 12/30 [04:27<06:06, 20.35s/trial, best loss: -0.49844720496894407]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 43%|███████████████████▉                          | 13/30 [05:02<07:00, 24.71s/trial, best loss: -0.49844720496894407]"
+      " 40%|██████████████████▍                           | 12/30 [04:27<06:06, 20.35s/trial, best loss: -0.49844720496894407]\n"
      ]
     },
     {
@@ -4668,7 +4660,15 @@
      "output_type": "stream",
      "text": [
       "\r",
-      " 47%|█████████████████████▍                        | 14/30 [05:44<07:59, 29.97s/trial, best loss: -0.49844720496894407]"
+      " 43%|███████████████████▉                          | 13/30 [05:02<07:00, 24.71s/trial, best loss: -0.49844720496894407]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 47%|█████████████████████▍                        | 14/30 [05:44<07:59, 29.97s/trial, best loss: -0.49844720496894407]\n"
      ]
     },
     {
@@ -4692,7 +4692,7 @@
       "        Micro Recall (on outer loop): 59.20%\n",
       "        Micro Precision (on outer loop): 47.10%\n",
       "\n",
-      " 53%|█████████████████████████                      | 16/30 [13:28<15:27, 66.23s/trial, best loss: -0.5291005291005291]"
+      " 53%|█████████████████████████                      | 16/30 [13:28<15:27, 66.23s/trial, best loss: -0.5291005291005291]\n"
      ]
     },
     {
@@ -4703,14 +4703,14 @@
       "Score on inner loop 0.570999248685199 \n",
       " {'colsample_bytree': 0.7982291177279011, 'gamma': 6.993950815828568, 'learning_rate': 0.06307145786845687, 'max_depth': 5, 'min_child_weight': 9.0, 'n_estimators': 880, 'scale_pos_weight': 3.055582660408824, 'n_components': 220}\n",
       "\n",
-      " 27%|████████████▊                                   | 8/30 [09:32<30:15, 82.53s/trial, best loss: -0.4892881824464409]"
+      " 27%|████████████▊                                   | 8/30 [09:32<30:15, 82.53s/trial, best loss: -0.4892881824464409]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 33%|███████████████▋                               | 10/30 [12:25<28:11, 84.58s/trial, best loss: -0.4892881824464409]"
+      " 33%|███████████████▋                               | 10/30 [12:25<28:11, 84.58s/trial, best loss: -0.4892881824464409]\n"
      ]
     },
     {
