Update Using machine learning techniques to analyze open ended survey data.ipynb

--- a/Using machine learning techniques to analyze open ended survey data.ipynb
+++ b/Using machine learning techniques to analyze open ended survey data.ipynb
@@ -302,7 +302,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Make class to perform the different kinds of CV"
+    "# Class to perform the different kinds of CV"
    ]
   },
   {
@@ -375,7 +375,7 @@
     "                                         scoring='f1_micro',\n",
     "                                         n_iter = iterations, \n",
     "                                         cv = inner_cv, \n",
-    "                                         verbose=1, \n",
+    "                                         verbose=0, \n",
     "                                         n_jobs = -1)\n",
     "            \n",
     "            \n",
@@ -385,7 +385,7 @@
     "                                   scoring='f1_micro',\n",
     "                                   n_jobs=-1,\n",
     "                                   cv=inner_cv,\n",
-    "                                   verbose=1)\n",
+    "                                   verbose=0)\n",
     "            \n",
     "            # make the outer folds\n",
     "            print(50 * '-', '\\n')\n",
@@ -396,10 +396,12 @@
     "            outer_cv = MultilabelStratifiedKFold(n_splits=outer_splits, shuffle=True, random_state=0)\n",
     "\n",
     "            # loop over the different outer folds \n",
+    "            fold=1 \n",
     "            for train_idx, test_idx in list(outer_cv.split(self.X, self.Y)):\n",
     "                # fit the gridsearch object on the training fold\n",
     "                # it will split it again in folds and perform a gridsearchCV determening the best parameters\n",
     "                gcv.fit(self.X.iloc[train_idx,:], self.Y.iloc[train_idx,:]) \n",
+    "                print('Fold', fold)\n",
     "                print(f'\\n        Best Micro F1 score (inner test folds): {gcv.best_score_ * 100:.2f}%')\n",
     "                print('        Best parameters:', gcv.best_params_)\n",
     "\n",
@@ -412,6 +414,7 @@
     "                        print(f\"        {metric} (on outer loop): {self.scores[metric][-1]:.2f}%\")\n",
     "                if cm:\n",
     "                    pprint(multilabel_confusion_matrix(y_true, y_pred))\n",
+    "                fold += 1\n",
     "            \n",
     "            # print the average performance of the procedure on the test folds\n",
     "            # and print its stability\n",
@@ -584,21 +587,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2.  Modelling using pre-coded features"
+    "# 1.  Modelling using pre-coded features"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.1 Naive bayes"
+    "## 1.1 Naive bayes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1.2  Multinomial Naive Bayes"
+    "### 1.1.2  Multinomial Naive Bayes"
    ]
   },
   {
@@ -669,7 +672,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1.3 Complement Naive Bayes"
+    "### 1.1.3 Complement Naive Bayes"
    ]
   },
   {
