--- a/code thesis-project.ipynb
+++ b/code thesis-project.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using Machine Learning techniques to build predictive models using open ended survey data"
+    "# Using Machine Learning techniques to build predictive models based on open ended survey data"
    ]
   },
   {
